# GdIconMaker

./: CMakeLists.txt  README.md  geode.yml  mod.json
.github/workflows/: build-mac.yaml  build-win.yaml  build.yaml  build.yml
src/: main.cpp
